create tela carrinho e ajustes no css login

--- a/login.html
+++ b/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maple Store - Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 
 <body>
     <div class="header-preto ">
         <div class="logo">
-            <img src="../img/logmaplebranco.png" alt="Maple Store Logo">
+            <img src="./img/logobranco.png" alt="Maple Store Logo">
         </div>
     </div>
 
@@ -29,7 +29,7 @@
 
     <div>
         <div class="divider"><span>ou</span></div>
-        <button class="btn-secondary">PRIMEIRO ACESSO? CADASTRE-SE</button>
+        <button class="btn-secondary">PRIMEIRO ACESSO? <a href="./cadastroUsuario.html">CADASTRE-SE</a>  </button>
     </div>
 
     </div>
