--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="header-preto ">
-        <div class="logo">
+    <div class="header-pretoo ">
+        <div class="logoo">
             <img src="./img/logobranco.png" alt="Maple Store Logo">
         </div>
     </div>
