adicionado botao voltar nas paginas de cadastro, carrinho feito logica do javascript e ajustes no arquivo css

--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -10,14 +10,16 @@
 
 <body>
     <div class="header-preto ">
+        <div class="voltar">
+            <img src="../img/arrow-left.svg" alt="Voltar" id="btnVoltar">
+        </div>
         <div class="logo">
-            <img src="../img/logmaplebranco.png" alt="Maple Store Logo">
+            <img src="../img/logobranco.png" alt="Maple Store Logo">
         </div>
     </div>
     <div class="separator-container">
         <h2>Primeiro acesso</h2>
         <p>Preencha seus dados de cadastro para criar uma conta na maple store</p>
-
     </div>
     <div class="login-container">
         <form>
@@ -27,6 +29,7 @@
             <button type="submit" class="btn-primary">CADASTRAR</button>
         </form>
     </div>
+        <script src="javascript/script.js"></script>
 </body>
 
 </html>
