--- a/login.html
+++ b/login.html
@@ -29,10 +29,9 @@
 
     <div>
         <div class="divider"><span>ou</span></div>
-        <button class="btn-secondary">PRIMEIRO ACESSO? <a href="./cadastroUsuario.html">CADASTRE-SE</a>  </button>
+        <button id="btnCadastro" class="btn-secondary">PRIMEIRO ACESSO? CADASTRE-SE</button>
     </div>
-
-    </div>
+    <script src="javascript/script.js"></script>
 
 </body>
 
