--- a/carrinho.html
+++ b/carrinho.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maple Store - Carrinho</title>
     <link rel="stylesheet" href="./css/carrinho.css">
 </head>
 
@@ -48,7 +48,7 @@
                 </div>
 
 
-                <button class="btn-atualizar-carrinho">ATUALIZAR CARRINHO</button>
+                <button class="btn-secondary">ATUALIZAR CARRINHO</button>
             </div>
 
             <div class="secao-resumo">
@@ -69,7 +69,7 @@
                     <span>Total</span>
                     <span class="valor-total">R$100.00</span>
                 </div>
-                <button class="btn-finalizar-compra">
+                <button class="btn-primary">
                     IR PARA PAGAMENTO
                 </button>
 
