--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header-pretoo ">
          <div class="voltar">
-            <img src="../img/arrow-left.svg" alt="Voltar" id="btnVoltar">
+            <img src="../img/arrow-left.svg" alt="Voltar" id="btnVoltarIndex">
         </div>
         <div class="logoo">
             <img src="./img/logobranco.png" alt="Maple Store Logo">
