Feito carrossel de imagens dentro do index, deletado css de cadastrar produto onde agora ele faz referencia para o css de login e feito ajuste de identacao de codigo

--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maple Store - Cadastro</title>
-    <link rel="stylesheet" href="./css/cadastroUsuario.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 
 <body>
-    <div class="header-preto ">
+    <div class="header-preto">
         <div class="voltar">
             <img src="../img/arrow-left.svg" alt="Voltar" id="btnVoltar">
         </div>
@@ -29,7 +29,7 @@
             <button type="submit" class="btn-primary">CADASTRAR</button>
         </form>
     </div>
-        <script src="javascript/script.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
