--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <div class="header-pretoo ">
-         <div class="voltar">
+    <div class="header-preto">
+        <div class="voltar">
             <img src="../img/arrow-left.svg" alt="Voltar" id="btnVoltarIndex">
         </div>
-        <div class="logoo">
+        <div class="logo">
             <img src="./img/logobranco.png" alt="Maple Store Logo">
         </div>
     </div>
