--- a/index.html
+++ b/index.html
@@ -1,65 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maple Store - Home</title>
-    <link rel="stylesheet" href="./css/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maple Store - Home</title>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-    <div class="container">
+  <div class="container">
 
-        <div class="carrossel">
-            <img src="./img/imgcontainer.jpg" alt="Imagem 1" class="active">
-            <img src="./img/logobranco.png" alt="Imagem 2">
-            <img src="./img/imgcontainer.jpg" alt="Imagem 3">
-        </div>
-
-        <div class="navbar">
-            <div class="logo">
-                <img src="../img/logobranco.png" alt="Maple Store Logo">
-            </div>
-
-            <div class="icons">
-                <div class="search">
-                    <input type="text" placeholder="Buscar">
-                    <button>
-                        <svg class="buscar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="11" cy="11" r="8"></circle>
-                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                        </svg>
-                    </button>
-                </div>
-
-                <a href="./carrinho.html">
-                    <div>
-                        <svg class="bag" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 
-                         2-2V6l-3-4z"></path>
-                            <line x1="3" y1="6" x2="21" y2="6"></line>
-                            <path d="M16 10a4 4 0 0 1-8 0"></path>
-                        </svg>
-                    </div>
-                </a>
-
-                <a href="./login.html">
-                    <div>
-                        <svg class="user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M20 21v-2a4 4 0 0 0-4-4H8
-                         a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="12" cy="7" r="4"></circle>
-                        </svg>
-                    </div>
-                </a>
-            </div>
-        </div>
+   
+    <div class="carrossel">
+      <img src="./img/imgcontainer.jpg" alt="Imagem 1" class="active">
+      <img src="./img/imgbanner.jpg" alt="Imagem 2 " >
+      <img src="./img/imgcontainer.jpg" alt="Imagem 3">
     </div>
-    <script src="javascript/script.js"></script>
-</body>
 
+   
+    <div class="navbar">
+      <div class="logo">
+        <img src="../img/logobranco.png" alt="Maple Store Logo">
+      </div>
+
+      <div class="icons">
+        <div class="search">
+          <input type="text" placeholder="Buscar">
+          <button>
+            <svg class="buscar" xmlns="http://www.w3.org/2000/svg" fill="none"
+                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="11" cy="11" r="8"></circle>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+            </svg>
+          </button>
+        </div>
+
+        <a href="./carrinho.html">
+          <div>
+            <svg class="bag" xmlns="http://www.w3.org/2000/svg" fill="none"
+                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+              <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 
+                       2-2V6l-3-4z"></path>
+              <line x1="3" y1="6" x2="21" y2="6"></line>
+              <path d="M16 10a4 4 0 0 1-8 0"></path>
+            </svg>
+          </div>
+        </a>
+
+        <a href="./login.html">
+          <div>
+            <svg class="user" xmlns="http://www.w3.org/2000/svg" fill="none"
+                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+              <path d="M20 21v-2a4 4 0 0 0-4-4H8
+                       a4 4 0 0 0-4 4v2"></path>
+              <circle cx="12" cy="7" r="4"></circle>
+            </svg>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    
+    <div class="container-card">
+      <div class="card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Lupo_logo.svg/512px-Lupo_logo.svg.png" alt="Lupo">
+      </div>
+      <div class="card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Logo_NIKE.svg/960px-Logo_NIKE.svg.png" alt="Nike">
+      </div>
+      <div class="card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Original_Adidas_logo.svg/512px-Original_Adidas_logo.svg.png" alt="Adidas">
+      </div>
+      <div class="card">
+        <img src="https://decathlonstore.vtexassets.com/assets/vtex.file-manager-graphql/images/24fe6ff7-a87e-4865-8d54-fa4b6eb1915d___4222ae49b7a409bcb9ab399834224cb3.png" alt="Decathlon">
+      </div>
+      <div class="card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Lupo_logo.svg/512px-Lupo_logo.svg.png" alt="Lupo">
+      </div>
+      <div class="card">
+        <img src="https://cdn.freebiesupply.com/logos/large/2x/asics-6-logo-png-transparent.png" alt="Asics">
+      </div>
+      <div class="card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Converse_logo.svg/960px-Converse_logo.svg.png" alt="Converse">
+      </div>
+    </div>
+
+    
+    <div class="container-produtos">
+      <div class="section-title" id="produtos">
+        <h2>Produtos em Destaque</h2>
+        <p>Os melhores produtos para você praticar seu esporte favorito</p>
+      </div>
+
+      <div class="as">
+        <div class="product-card-container">
+          <div class="product-image-container">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg" alt="Air Max Plus Drift">
+          </div>
+
+          <div class="product-details-container">
+            <p class="product-category">Casual</p>
+            <h2 class="product-name">Women's Air Max Plus Drift</h2>
+            <p class="product-price">R$ 759,99</p>
+          </div>
+        </div>
+
+        <div class="product-card-container">
+          <div class="product-image-container">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg" alt="Air Max Plus Drift">
+          </div>
+
+          <div class="product-details-container">
+            <p class="product-category">Casual</p>
+            <h2 class="product-name">Women's Air Max Plus Drift</h2>
+            <p class="product-price">R$ 759,99</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <script src="./javascript/script.js"></script>
+</body>
 </html>
