ajustado bug carrosel de imagens e add imagens dos produtos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +11,12 @@
 <body>
   <div class="container">
 
-   
     <div class="carrossel">
       <img src="./img/imgcontainer.jpg" alt="Imagem 1" class="active">
-      <img src="./img/imgbanner.jpg" alt="Imagem 2 " >
+      <img src="./img/imgbanner.jpg" alt="Imagem 2">
       <img src="./img/imgcontainer.jpg" alt="Imagem 3">
     </div>
 
-   
     <div class="navbar">
       <div class="logo">
         <img src="../img/logobranco.png" alt="Maple Store Logo">
@@ -27,9 +26,8 @@
         <div class="search">
           <input type="text" placeholder="Buscar">
           <button>
-            <svg class="buscar" xmlns="http://www.w3.org/2000/svg" fill="none"
-                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
+            <svg class="buscar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <circle cx="11" cy="11" r="8"></circle>
               <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
             </svg>
@@ -38,9 +36,8 @@
 
         <a href="./carrinho.html">
           <div>
-            <svg class="bag" xmlns="http://www.w3.org/2000/svg" fill="none"
-                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
+            <svg class="bag" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 
                        2-2V6l-3-4z"></path>
               <line x1="3" y1="6" x2="21" y2="6"></line>
@@ -51,9 +48,8 @@
 
         <a href="./login.html">
           <div>
-            <svg class="user" xmlns="http://www.w3.org/2000/svg" fill="none"
-                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
+            <svg class="user" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M20 21v-2a4 4 0 0 0-4-4H8
                        a4 4 0 0 0-4 4v2"></path>
               <circle cx="12" cy="7" r="4"></circle>
@@ -63,42 +59,62 @@
       </div>
     </div>
 
-    
     <div class="container-card">
       <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Lupo_logo.svg/512px-Lupo_logo.svg.png" alt="Lupo">
+        <img
+          src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.6.2/img/brands/brand-3___9b414ad1e1d092183b2cd1d15aafefa0.svg"
+          alt="Newbalance">
       </div>
       <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Logo_NIKE.svg/960px-Logo_NIKE.svg.png" alt="Nike">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Logo_NIKE.svg/960px-Logo_NIKE.svg.png"
+          alt="Nike">
       </div>
       <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Original_Adidas_logo.svg/512px-Original_Adidas_logo.svg.png" alt="Adidas">
+        <img
+          src="https://authenticfeet.vtexassets.com/assets/vtex.file-manager-graphql/images/359c30ff-877c-46f6-bcc1-3a512daa3573___c982d86aa23fa217e4b7084bbca6f3e9.svg"
+          alt="Adidas">
       </div>
       <div class="card">
-        <img src="https://decathlonstore.vtexassets.com/assets/vtex.file-manager-graphql/images/24fe6ff7-a87e-4865-8d54-fa4b6eb1915d___4222ae49b7a409bcb9ab399834224cb3.png" alt="Decathlon">
+        <img
+          src="https://decathlonstore.vtexassets.com/assets/vtex.file-manager-graphql/images/24fe6ff7-a87e-4865-8d54-fa4b6eb1915d___4222ae49b7a409bcb9ab399834224cb3.png"
+          alt="Decathlon">
       </div>
       <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Lupo_logo.svg/512px-Lupo_logo.svg.png" alt="Lupo">
+        <img
+          src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.6.2/img/brands/brand-2___bda36e85f632276a24daec0090558f2a.svg"
+          alt="Vans">
       </div>
       <div class="card">
         <img src="https://cdn.freebiesupply.com/logos/large/2x/asics-6-logo-png-transparent.png" alt="Asics">
       </div>
       <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Converse_logo.svg/960px-Converse_logo.svg.png" alt="Converse">
+        <img
+          src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.6.2/img/brands/brand-5___a480272ed68e78fbdc82a8370de53f06.svg"
+          alt="Puma">
+      </div>
+      <div class="card">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Converse_logo.svg/960px-Converse_logo.svg.png"
+          alt="Mizuno">
+      </div>
+      <div class="card">
+        <img
+          src="https://authenticfeet.vtexassets.com/assets/vtex.file-manager-graphql/images/6e64de3b-9615-44fa-ba0f-71d03944b015___83e8b6ff823a0abda942794cb452bfd5.svg"
+          alt="Lacoste">
       </div>
     </div>
 
-    
     <div class="container-produtos">
       <div class="section-title" id="produtos">
-        <h2>Produtos em Destaque</h2>
+        <h2>Produtos</h2>
         <p>Os melhores produtos para você praticar seu esporte favorito</p>
       </div>
 
       <div class="as">
         <div class="product-card-container">
           <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg" alt="Air Max Plus Drift">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
+              alt="Air Max Plus Drift">
           </div>
 
           <div class="product-details-container">
@@ -110,7 +126,47 @@
 
         <div class="product-card-container">
           <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg" alt="Air Max Plus Drift">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
+              alt="Air Max Plus Drift">
+          </div>
+
+          <div class="product-details-container">
+            <p class="product-category">Casual</p>
+            <h2 class="product-name">Women's Air Max Plus Drift</h2>
+            <p class="product-price">R$ 759,99</p>
+          </div>
+        </div>
+
+        <div class="product-card-container">
+          <div class="product-image-container">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
+              alt="Air Max Plus Drift">
+          </div>
+
+          <div class="product-details-container">
+            <p class="product-category">Casual</p>
+            <h2 class="product-name">Women's Air Max Plus Drift</h2>
+            <p class="product-price">R$ 759,99</p>
+          </div>
+        </div>
+
+        <div class="product-card-container">
+          <div class="product-image-container">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
+              alt="Air Max Plus Drift">
+          </div>
+
+          <div class="product-details-container">
+            <p class="product-category">Casual</p>
+            <h2 class="product-name">Women's Air Max Plus Drift</h2>
+            <p class="product-price">R$ 759,99</p>
+          </div>
+        </div>
+
+        <div class="product-card-container">
+          <div class="product-image-container">
+            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
+              alt="Air Max Plus Drift">
           </div>
 
           <div class="product-details-container">
@@ -121,9 +177,9 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <script src="./javascript/script.js"></script>
 </body>
+
 </html>
