adicionado localStorege feito acoes de cadastrar usaurio pelo localStore e acao de login feita

--- a/login.html
+++ b/login.html
@@ -24,10 +24,11 @@
     </div>
 
     <div class="login-container">
-        <form>
-            <input type="text" placeholder="E-mail, CPF ou CNPJ" required>
+        <form id="formLogin">
+            <input id="logEmail" type="email" placeholder="E-mail, CPF ou CNPJ" required>
             <button type="submit" class="btn-primary">ENTRAR</button>
         </form>
+        <p id="msgLogin" class="msg"></p>
     </div>
 
     <div>
