Feito acao de cards, assim que for clicado usuario e direcionado para tela de produtos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
       <div class="card">
         <img
           src="https://decathlonstore.vtexassets.com/assets/vtex.file-manager-graphql/images/24fe6ff7-a87e-4865-8d54-fa4b6eb1915d___4222ae49b7a409bcb9ab399834224cb3.png"
-          alt="Decathlon">
+          alt="Olympikus">
+      </div>
+      <div class="card">
+        <img src="https://maze.jetassets.com.br/marcas/1715364784141-037500883485367287.png" alt="Mizuno">
       </div>
       <div class="card">
         <img
@@ -95,90 +98,14 @@
       <div class="card">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Converse_logo.svg/960px-Converse_logo.svg.png"
-          alt="Mizuno">
-      </div>
-      <div class="card">
-        <img
-          src="https://authenticfeet.vtexassets.com/assets/vtex.file-manager-graphql/images/6e64de3b-9615-44fa-ba0f-71d03944b015___83e8b6ff823a0abda942794cb452bfd5.svg"
-          alt="Lacoste">
+          alt="Converse">
       </div>
     </div>
 
     <div class="container-produtos">
-      <div class="section-title" id="produtos">
-        <h2>Produtos</h2>
-        <p>Os melhores produtos para você praticar seu esporte favorito</p>
-      </div>
-
-      <div class="as">
-        <div class="product-card-container">
-          <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
-              alt="Air Max Plus Drift">
-          </div>
-
-          <div class="product-details-container">
-            <p class="product-category">Casual</p>
-            <h2 class="product-name">Women's Air Max Plus Drift</h2>
-            <p class="product-price">R$ 759,99</p>
-          </div>
-        </div>
-
-        <div class="product-card-container">
-          <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
-              alt="Air Max Plus Drift">
-          </div>
-
-          <div class="product-details-container">
-            <p class="product-category">Casual</p>
-            <h2 class="product-name">Women's Air Max Plus Drift</h2>
-            <p class="product-price">R$ 759,99</p>
-          </div>
-        </div>
-
-        <div class="product-card-container">
-          <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
-              alt="Air Max Plus Drift">
-          </div>
-
-          <div class="product-details-container">
-            <p class="product-category">Casual</p>
-            <h2 class="product-name">Women's Air Max Plus Drift</h2>
-            <p class="product-price">R$ 759,99</p>
-          </div>
-        </div>
-
-        <div class="product-card-container">
-          <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
-              alt="Air Max Plus Drift">
-          </div>
-
-          <div class="product-details-container">
-            <p class="product-category">Casual</p>
-            <h2 class="product-name">Women's Air Max Plus Drift</h2>
-            <p class="product-price">R$ 759,99</p>
-          </div>
-        </div>
-
-        <div class="product-card-container">
-          <div class="product-image-container">
-            <img class="product-image" src="https://imgnike-a.akamaihd.net/1920x1920/09397952A5.jpg"
-              alt="Air Max Plus Drift">
-          </div>
-
-          <div class="product-details-container">
-            <p class="product-category">Casual</p>
-            <h2 class="product-name">Women's Air Max Plus Drift</h2>
-            <p class="product-price">R$ 759,99</p>
-          </div>
-        </div>
-      </div>
+      <div id="produtosGrid" class="as"></div>
     </div>
   </div>
-
   <script src="./javascript/script.js"></script>
 </body>
 
