--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
     </div>
 
     <div class="container-produtos">
+      <div class="section-title" id="produtos">
+        <h2>Produtos</h2>
+        <p>A combinação perfeita entre conforto e estilo</p>
+      </div>
       <div id="produtosGrid" class="as"></div>
     </div>
   </div>
