--- a/produto.html
+++ b/produto.html
@@ -33,8 +33,7 @@
                 </div>
 
                 <div class="acoes">
-                    <button class="btn-primary">ADICIONAR AO CARRINHO</button>
-                    <button class="btn-secondary">SALVAR COMO FAVORITO</button>
+                    <button id="btnAdicionarCarrinho" class="btn-primary">ADICIONAR AO CARRINHO</button>
                 </div>
             </div>
         </div>
