--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="container">
 
     <div class="carrossel">
-      <img src="./img/imgcontainer.jpg" alt="Imagem 1" class="active">
-      <img src="./img/imgbanner.jpg" alt="Imagem 2">
-      <img src="./img/imgcontainer.jpg" alt="Imagem 3">
+      <img src="./img/imgcarrosel1.jpg" alt="Imagem 1" class="active">
+      <img src="./img/imgcarrosel2.jpg" alt="Imagem 2">
+      <img src="./img/imgcarrosel3.jpg" alt="Imagem 3">
     </div>
 
     <div class="navbar">
