Feito footer da pagina de index

--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
       <div id="produtosGrid" class="as"></div>
     </div>
   </div>
+
+  <footer class="footer">
+
+    <div class="footer-main">
+      <div class="footer-column logo-col">
+        <img src="img/logobranco.png" alt="Maple Logo">
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="payments">
+        <h4>FORMAS DE PAGAMENTO</h4>
+        <div class="payment-icons">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-1___2d022968a396503cff01081852ba796d.svg" alt="Visa">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-0___37f2f2d921b0639851a7d0ab7ac28b1c.svg" alt="Mastercard">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-5___b629ea77db9e0ab4d410296ae5f4d3f2.svg "alt="Amex">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-2___295bec1fe785398ae6bffe1636460c11.svg" alt="Elo">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-3___9be545380e4403eacf5b373227bfc52a.svg" alt="Hipercard">
+          <img src="https://authenticfeet.vtexassets.com/assets/vtex/assets-builder/authenticfeet.authenticfeet-theme/5.11.48/img/payments/payment-3___9be545380e4403eacf5b373227bfc52a.svg" alt="Hiper">
+        </div>
+        <p>Parcelamento em até 6x sem juros com mínimo de R$100*</p>
+      </div>
+    </div>
+
+    <div class="copy">
+      <p>Copyright © 2025 Maple. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
   <script src="./javascript/script.js"></script>
 </body>
 
