Adicionado produtos na tela de index

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="footer-main">
       <div class="footer-column logo-col">
-        <img src="img/logobranco.png" alt="Maple Logo">
+        <img src="img/logopreto.png" alt="Maple Logo">
       </div>
     </div>
 
