--- a/index.html
+++ b/index.html
@@ -17,10 +17,43 @@
       <img src="./img/imgcarrosel3.jpg" alt="Imagem 3">
     </div>
 
-    <div class="navbar">
-      <div class="logo">
+<div class="navbar">
+    <div class="logo">
         <img src="../img/logobranco.png" alt="Maple Store Logo">
-      </div>
+    </div>
+
+    <div class="icons">
+        <div class="user-wrapper">
+            <span id="olaUsuario" class="ola-user" style="display:none;"></span>
+        </div>
+
+        <a href="./carrinho.html">
+            <div class="user-wrapper">
+                <svg class="bag" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0
+                                    2-2V6l-3-4z"></path>
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <path d="M16 10a4 4 0 0 1-8 0"></path>
+                </svg>
+            </div>
+        </a>
+
+        <a href="./login.html" id="userArea">
+            <div class="user-wrapper">
+                <svg class="user" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M20 21v-2a4 4 0 0 0-4-4H8
+                                    a4 4 0 0 0-4 4v2"></path>
+                    <circle cx="12" cy="7" r="4"></circle>
+                </svg>
+            </div>
+        </a>
+
+        <a href="#" id="botaoSair" class="botao-sair" style="display: none;">Sair</a>
+
+    </div>
+</div>
 
       <div class="icons">
         <div class="user-wrapper">
